--- a/src/css/main.css
+++ b/src/css/main.css
@@ -209,6 +209,21 @@ Navbar
 ===============
 */
 
+.logo {
+  margin-top: 2.3rem;
+  margin-left: -6.3rem;
+  height: 120px;
+  width: 300px;
+}
+@media screen and (max-width: 767px) {
+  .logo {
+    margin-top: 2rem;
+    margin-left: -3.3rem;
+    height: 90px;
+    width: 200px;
+  }
+}
+
 .navbar {
   position: absolute;
   top: 0;
