Updated Hero component | Styling

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -444,7 +444,7 @@ Hero
   background: var(--clr-primary-10);
 }
 .hero-img {
-  display: none;
+  display: flex;
 }
 .hero-info h4 {
   color: var(--clr-grey-5);
@@ -455,7 +455,6 @@ Hero
 .hero .btn {
   margin-top: 1.25rem;
 }
-
 @media screen and (min-width: 992px) {
   .hero::before {
     content: "";
