Updated Styling components

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -589,7 +589,7 @@ Jobs
   margin-bottom: 4rem;
 }
 .job-btn {
-  font-family: "Galada";
+  font-family: "Times New Roman";
   background: transparent;
   border-color: transparent;
   text-transform: capitalize;
